# resume-analyser

./: .gitignore  QUICKSTART.md  README.md  UV_GUIDE.md  start.ps1
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
frontend/: hr.html  index.html  script.js  styles.css  user.html
