[project]
name = "resume-analyser"
version = "2.0.0"
description = "AI-powered resume matching with vector similarity search"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "pypdf>=4.0.1",
    "sentence-transformers>=2.3.1",
    "qdrant-client>=1.7.3",
    "groq>=0.4.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"
